Adicionado homepage construção e demo

--- a/www/index.html
+++ b/www/index.html
@@ -457,7 +457,7 @@
                 </p>
 
                 <p id="title-2">
-                    Lorem ipsum
+                    Construção
                 </p>
 
                 <p id="title-3">
@@ -471,6 +471,61 @@
                         Fale Connosco
                     </button>
                 </div>
+
+                <div class="sub-homepage-info">
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z" fill="white"/>
+                            </svg>  Orçamentação à medida
+                        </p>                         
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z" fill="white"/>
+                            </svg>  Orçamentação à medida
+                        </p>                         
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+                    
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z" fill="white"/>
+                            </svg>  Orçamentação à medida
+                        </p>                         
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z" fill="white"/>
+                            </svg>  Orçamentação à medida
+                        </p>                         
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+
+                </div>
+
             </div>
         </div>
         <hr id="first-hr">
@@ -856,7 +911,26 @@
 
 
 
+
+
+
             
+            <!-- SECÇÂO PEDIR DEMO-->
+
+            <div id="demo-section-construction" class="demo-section">
+                <p class="demo-section-text"><strong>Obras entregues no tempo previsto,</strong> ao custo estimado e com a máxima qualidade</p>
+                <button class="white-button">
+                    Pedir a demo
+                </button>
+
+
+
+            </div>
+
+            <!-- FIM SECÇÂO PEDIR DEMO-->
+
+
+
 
 
 
