--- a/www/index.html
+++ b/www/index.html
@@ -926,7 +926,7 @@
                 </div>
 
                 <div id="complete_management_info">
-                    <p id="complete_management_text">A gestão completa e eficaz<br> dos seus projetos<span
+                    <p id="complete_management_text">A gestão completa e eficaz dos seus projetos<span
                             class="other-color" style="color:red">.</span></p>
                     <div class="accordion" id="accordionExample">
                         <div class="card">
