--- a/www/index.html
+++ b/www/index.html
@@ -473,6 +473,10 @@
                 </div>
 
                 <div class="sub-homepage-info">
+                    <svg class="arrows-sub-homepage" width="14" height="24" viewBox="0 0 14 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13.1813 2.94972C13.7951 2.33596 13.7937 1.34044 13.1782 0.72841C12.5649 0.118599 11.5738 0.120245 10.9626 0.73209L1.11884 10.5858C0.338463 11.3669 0.338784 12.6327 1.11955 13.4135L10.9748 23.2687C11.5858 23.8797 12.5763 23.8797 13.1873 23.2687C13.7983 22.6578 13.7983 21.6672 13.1873 21.0562L5.54527 13.4142C4.76422 12.6332 4.76422 11.3668 5.54527 10.5858L13.1813 2.94972Z" fill="white"/>
+                        </svg>
+
                     <div class="sub-homepage-info-item">
                         <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -482,7 +486,7 @@
                             </svg> Orçamentação à medida
                         </p>
                         <p class="sub-homepage-info-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                            1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
                         </p>
 
                     </div>
@@ -498,7 +502,7 @@
                             </svg> Orçamentação à medida
                         </p>
                         <p class="sub-homepage-info-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                            2 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
                         </p>
 
                     </div>
@@ -514,7 +518,7 @@
                             </svg> Orçamentação à medida
                         </p>
                         <p class="sub-homepage-info-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                            3 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
                         </p>
 
                     </div>
@@ -530,10 +534,14 @@
                             </svg> Orçamentação à medida
                         </p>
                         <p class="sub-homepage-info-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                            4 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
                         </p>
 
                     </div>
+                    <svg class="arrows-sub-homepage" width="14" height="24" viewBox="0 0 14 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.81867 2.94972C0.204914 2.33596 0.206317 1.34044 0.8218 0.72841C1.43506 0.118599 2.4262 0.120245 3.03742 0.73209L12.8812 10.5858C13.6615 11.3669 13.6612 12.6327 12.8804 13.4135L3.0252 23.2687C2.41423 23.8797 1.42366 23.8797 0.812698 23.2687C0.201734 22.6578 0.201733 21.6672 0.812697 21.0562L8.45473 13.4142C9.23578 12.6332 9.23578 11.3668 8.45473 10.5858L0.81867 2.94972Z" fill="white"/>
+                        </svg>
+                        
 
 
                 </div>
