--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -16,10 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <script src="scripts/pageManager.js"></script>
     <script src="scripts/especialistas.js"></script>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/style_especialistas.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
@@ -459,7 +457,7 @@
                 </p>
 
                 <p id="title-2">
-                    Lorem ipsum
+                    Construção
                 </p>
 
                 <p id="title-3">
@@ -473,6 +471,73 @@
                         Fale Connosco
                     </button>
                 </div>
+
+                <div class="sub-homepage-info">
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Orçamentação à medida
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Orçamentação à medida
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Orçamentação à medida
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line">
+
+                    <div class="sub-homepage-info-item">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Orçamentação à medida
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+
+                </div>
+
             </div>
         </div>
         <hr id="first-hr">
@@ -861,15 +926,16 @@
                 </div>
 
                 <div id="complete_management_info">
-                    <p id="complete_management_text">A gestão completa e eficaz<br> dos seus projetos<span
+                    <p id="complete_management_text">A gestão completa e eficaz dos seus projetos<span
                             class="other-color" style="color:red">.</span></p>
                     <div class="accordion" id="accordionExample">
                         <div class="card">
                             <div class="accordion_background card-header" id="headingOne">
                                 <h2 class="mb-0">
-                                    <button id="buttonOne" class="btn buttons_text_management btn-link btn-block text-left"
-                                        type="button" data-toggle="collapse" data-target="#collapseOne"
-                                        aria-expanded="true" aria-controls="collapseOne">
+                                    <button id="buttonOne"
+                                        class="btn buttons_text_management btn-link btn-block text-left" type="button"
+                                        data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                                        aria-controls="collapseOne">
                                         Balanço de Obra <svg id="first_svg_management" class="accordion_svgs" width="32"
                                             height="33" viewBox="0 0 32 33" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
@@ -895,7 +961,8 @@
                         <div class="card">
                             <div class="accordion_background card-header" id="headingTwo">
                                 <h2 class="mb-0">
-                                    <button id="buttonTwo" class="btn buttons_text_management btn-link btn-block text-left collapsed"
+                                    <button id="buttonTwo"
+                                        class="btn buttons_text_management btn-link btn-block text-left collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseTwo"
                                         aria-expanded="false" aria-controls="collapseTwo">
                                         Gestão de encomendas e compras a fornecedores <svg id="second_svg_management"
@@ -921,12 +988,13 @@
                         <div class="card">
                             <div class="accordion_background card-header" id="headingThree">
                                 <h2 class="mb-0">
-                                    <button id="buttonThree" class="btn buttons_text_management btn-link btn-block text-left collapsed"
+                                    <button id="buttonThree"
+                                        class="btn buttons_text_management btn-link btn-block text-left collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseThree"
                                         aria-expanded="false" aria-controls="collapseThree">
-                                        Gestão de tesouraria, pagamentos e cobranças <svg id="third_svg_management" class="accordion_svgs"
-                                            width="32" height="33" viewBox="0 0 32 33" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                        Gestão de tesouraria, pagamentos e cobranças <svg id="third_svg_management"
+                                            class="accordion_svgs" width="32" height="33" viewBox="0 0 32 33"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="16" cy="16.5" r="16" fill="#424242" />
                                             <path
                                                 d="M23.2481 14.2231C23.4381 14.0288 23.4381 13.7183 23.2481 13.524L22.1152 12.3653C21.9192 12.1648 21.5967 12.1646 21.4005 12.3649L16.1521 17.7213C15.9561 17.9214 15.6339 17.9214 15.4378 17.7213L10.1894 12.3649C9.99322 12.1646 9.67075 12.1648 9.47477 12.3653L8.34185 13.524C8.15187 13.7183 8.15187 14.0288 8.34185 14.2231L15.4375 21.4805C15.6336 21.6811 15.9564 21.6811 16.1525 21.4805L23.2481 14.2231Z"
@@ -947,12 +1015,13 @@
                         <div class="card">
                             <div class="accordion_background card-header" id="headingFour">
                                 <h2 class="mb-0">
-                                    <button id="buttonFour" class="btn buttons_text_management btn-link btn-block text-left collapsed"
+                                    <button id="buttonFour"
+                                        class="btn buttons_text_management btn-link btn-block text-left collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseFour"
                                         aria-expanded="false" aria-controls="collapseFour">
-                                        Pedido e consulta de preços ágeis <svg id="fourth_svg_management" class="accordion_svgs" width="32"
-                                            height="33" viewBox="0 0 32 33" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                        Pedido e consulta de preços ágeis <svg id="fourth_svg_management"
+                                            class="accordion_svgs" width="32" height="33" viewBox="0 0 32 33"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="16" cy="16.5" r="16" fill="#424242" />
                                             <path
                                                 d="M23.2481 14.2231C23.4381 14.0288 23.4381 13.7183 23.2481 13.524L22.1152 12.3653C21.9192 12.1648 21.5967 12.1646 21.4005 12.3649L16.1521 17.7213C15.9561 17.9214 15.6339 17.9214 15.4378 17.7213L10.1894 12.3649C9.99322 12.1646 9.67075 12.1648 9.47477 12.3653L8.34185 13.524C8.15187 13.7183 8.15187 14.0288 8.34185 14.2231L15.4375 21.4805C15.6336 21.6811 15.9564 21.6811 16.1525 21.4805L23.2481 14.2231Z"
@@ -972,12 +1041,13 @@
                         <div class="card">
                             <div class="accordion_background card-header" id="headingFive">
                                 <h2 class="mb-0">
-                                    <button id="buttonFive" class="btn buttons_text_management btn-link btn-block text-left collapsed"
+                                    <button id="buttonFive"
+                                        class="btn buttons_text_management btn-link btn-block text-left collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseFive"
                                         aria-expanded="false" aria-controls="collapseFive">
-                                        Gestão de recursos e equipamentos da Obra <svg id="fifth_svg_management" class="accordion_svgs" width="32"
-                                            height="33" viewBox="0 0 32 33" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                        Gestão de recursos e equipamentos da Obra <svg id="fifth_svg_management"
+                                            class="accordion_svgs" width="32" height="33" viewBox="0 0 32 33"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="16" cy="16.5" r="16" fill="#424242" />
                                             <path
                                                 d="M23.2481 14.2231C23.4381 14.0288 23.4381 13.7183 23.2481 13.524L22.1152 12.3653C21.9192 12.1648 21.5967 12.1646 21.4005 12.3649L16.1521 17.7213C15.9561 17.9214 15.6339 17.9214 15.4378 17.7213L10.1894 12.3649C9.99322 12.1646 9.67075 12.1648 9.47477 12.3653L8.34185 13.524C8.15187 13.7183 8.15187 14.0288 8.34185 14.2231L15.4375 21.4805C15.6336 21.6811 15.9564 21.6811 16.1525 21.4805L23.2481 14.2231Z"
@@ -997,12 +1067,13 @@
                         <div class="card">
                             <div class="accordion_background card-header" id="headingSix">
                                 <h2 class="mb-0">
-                                    <button id="buttonSix" class="btn buttons_text_management btn-link btn-block text-left collapsed"
+                                    <button id="buttonSix"
+                                        class="btn buttons_text_management btn-link btn-block text-left collapsed"
                                         type="button" data-toggle="collapse" data-target="#collapseSix"
                                         aria-expanded="false" aria-controls="collapseSix">
-                                        Autos de medição em valor ou percentagem <svg id="sixth_svg_management" class="accordion_svgs" width="32"
-                                            height="33" viewBox="0 0 32 33" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                        Autos de medição em valor ou percentagem <svg id="sixth_svg_management"
+                                            class="accordion_svgs" width="32" height="33" viewBox="0 0 32 33"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="16" cy="16.5" r="16" fill="#424242" />
                                             <path
                                                 d="M23.2481 14.2231C23.4381 14.0288 23.4381 13.7183 23.2481 13.524L22.1152 12.3653C21.9192 12.1648 21.5967 12.1646 21.4005 12.3649L16.1521 17.7213C15.9561 17.9214 15.6339 17.9214 15.4378 17.7213L10.1894 12.3649C9.99322 12.1646 9.67075 12.1648 9.47477 12.3653L8.34185 13.524C8.15187 13.7183 8.15187 14.0288 8.34185 14.2231L15.4375 21.4805C15.6336 21.6811 15.9564 21.6811 16.1525 21.4805L23.2481 14.2231Z"
@@ -1022,7 +1093,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
 
 
@@ -1030,26 +1100,26 @@
 
 
 
+            <!-- SECÇÂO PEDIR DEMO-->
+
+            <div id="demo-section-construction" class="demo-section">
+                <p class="demo-section-text"><strong>Obras entregues no tempo previsto,</strong> ao custo estimado e com
+                    a máxima qualidade</p>
+                <button class="white-button">
+                    Pedir a demo
+                </button>
+
+
+
+            </div>
+
+            <!-- FIM SECÇÂO PEDIR DEMO-->
 
 
 
 
 
 
-
-
-
-
-
-
-        <div STYLE="background: black">
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
-            <a style="color:white">AHHHHH<br></a>
         </div>
 
 
