--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="scripts/especialistas.js"></script>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style_especialistas.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
@@ -958,7 +958,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button id="buttonTwo"
@@ -985,7 +985,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingThree">
                                 <h2 class="mb-0">
                                     <button id="buttonThree"
@@ -1012,7 +1012,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingFour">
                                 <h2 class="mb-0">
                                     <button id="buttonFour"
@@ -1038,7 +1038,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingFive">
                                 <h2 class="mb-0">
                                     <button id="buttonFive"
@@ -1064,7 +1064,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingSix">
                                 <h2 class="mb-0">
                                     <button id="buttonSix"
