--- a/www/index.html
+++ b/www/index.html
@@ -966,7 +966,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingTwo">
                                 <h2 class="mb-0">
                                     <button id="buttonTwo"
@@ -993,7 +993,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingThree">
                                 <h2 class="mb-0">
                                     <button id="buttonThree"
@@ -1020,7 +1020,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingFour">
                                 <h2 class="mb-0">
                                     <button id="buttonFour"
@@ -1046,7 +1046,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingFive">
                                 <h2 class="mb-0">
                                     <button id="buttonFive"
@@ -1072,7 +1072,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card_go_down card">
                             <div class="accordion_background card-header" id="headingSix">
                                 <h2 class="mb-0">
                                     <button id="buttonSix"
