--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
+        <script src="scripts/jquerySwipeHandler.js"></script>
     <script src="scripts/pageManager.js"></script>
+
+    
+
+   
     <link rel="stylesheet" href="styles/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
