--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -1115,6 +1115,14 @@
                 </div>
             </div>
 
+            <!-- Ideal Solution Chart Div-->
+            <div id="ideal_solution_chart">
+                <p id="ideal_solution_chart_text">A solução ideal para Construção Civil<span
+                    class="other-color" style="color:red">.</span></p>~
+
+                <img id="ideal_solution_chart_img" src="img/solution_chart.png" alt="">
+            </div>
+
 
 
 
